--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [project]
 name = "sign-pdf"
 version = "0.1.0"
-description = "Add your description here"
+description = "PDF signature/signing utility project. Add signatures to PDFs easily."
 readme = "README.md"
-requires-python = ">=3.11"
+authors = [{ name = "Lone Striker" }]
+requires-python = ">=3.9"
 dependencies = [
     "flask>=2.0",
     "pillow>=8.0",
