--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,21 @@ dependencies = [
     "pillow>=8.0",
     "pymupdf>=1.18.14",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+# [tool.hatch.build.targets.sdist]
+# include = [
+#   "sign_pdf",
+#   "web",
+# ]
+# exclude = [
+# ]
+
+[project.urls]
+"Source code" = "https://github.com/lonestriker/sign-pdf"
+
+[project.scripts]
+sign-pdf = "sign_pdf.app:main"
