--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Flask>=2.0
-PyMuPDF>=1.18.14  # Or a newer compatible version
 Pillow>=8.0       # For image handling fallback/robustness
+# PyMuPDF>=1.18.14  # Or a newer compatible version
